--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,16 +1,16 @@
 h1 a, h2 a {
-    color: #FF8833;
+    color: #35c1da;
     font-family: 'Lobster';
 }
 
 
 body {
-    padding-left: 15px;
+    margin:0;
 }
 
 .page-header {
-    background-color: #C25100;
-    margin-top: 0;
+    background-color: #1b8294fd;
+    margin: 0;
     padding: 20px 20px 20px 40px;
 }
 
@@ -42,9 +42,14 @@ h1, h2, h3, h4 {
 
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
-    float: right;
     font-size: 26pt;
-    margin-right: 20px;
+    float: right;
+}
+
+.top-menu-message{
+font-size: 2em;
+color: rgba(255, 255, 255, 0.699);
+margin: .4em; 
 }
 
 .post {
@@ -53,4 +58,16 @@ h1, h2, h3, h4 {
 
 .post h2 a, .post h2 a:visited {
     color: #000000;
+}
+
+button{
+    color: #000000;
+}
+
+.flex-registration{
+    display: flex;
+    margin-top: 10em;
+    width: 25em;
+    justify-content: space-evenly;
+    flex-direction: row;
 }
