--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,17 +2,20 @@
 
 {% block content %}
     <div class="post">
-        {% if post.published_date %}
+        {% if object.published_date %}
             <div class="date">
-                {{ post.published_date }}
+                {{ object.published_date }}
             </div>
         {% endif %}
         
-        {% if user.is_authenticated %}
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% if user.is_authenticated and user.id == object.author_id %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=object.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-danger" href="{% url 'post_delete' pk=object.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+
+        
         {% endif %}
 
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <h2>{{ object.title }}</h2>
+        <p>{{ object.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
