--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    {% for post in posts %}
+    {% for post in post_list %}
         <div class="post">
             <div class="date">
                 <p>published: {{ post.published_date }}</p>
