--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,12 +7,12 @@
                 {{ object.published_date }}
             </div>
         {% endif %}
+
+        <p class="publishedBy">Published by: {{ object.author.username }}</p>
         
         {% if user.is_authenticated and user.id == object.author_id %}
         <a class="btn btn-default" href="{% url 'post_edit' pk=object.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         <a class="btn btn-danger" href="{% url 'post_delete' pk=object.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-
-        
         {% endif %}
 
         <h2>{{ object.title }}</h2>
